--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -7,6 +7,8 @@
     <body>
         <div id='root'></div>
         <div id='overlay-root'></div>
+        <!-- TEMPORARY: Draft preview blocker - prevents Caffeine editor script injection -->
+        <script src='/caffeine-draft-preview-blocker.js'></script>
         <script type='module' src='/src/main.tsx'></script>
     </body>
 </html>
